cmd: sub -> subscribe
